internal/controller/test_data/featureinfo/expected/configmap-capabilities-generator.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: featureinfo-wmts-capabilities-generator-dg95hb7k27
  namespace: default
  labels:
    pdok.nl/app: mapproxy
    pdok.nl/dataset-id: dataset
    pdok.nl/owner-id: owner
    pdok.nl/service-type: wmts
    pdok.nl/service-version: v1_0
  ownerReferences:
    - apiVersion: pdok.nl/v2
      kind: WMTS
      name: featureinfo
      uid: ""
      controller: true
      blockOwnerDeletion: true
immutable: true
data:
  input.yaml: "IGNORED"
