internal/controller/test_data/featureinfo/expected/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: featureinfo-wmts-mapproxy
  namespace: default
  labels:
    pdok.nl/app: mapproxy
    pdok.nl/dataset-id: dataset
    pdok.nl/owner-id: owner
    pdok.nl/service-type: wmts
    pdok.nl/service-version: v1_0
  ownerReferences:
    - apiVersion: pdok.nl/v2
      kind: WMTS
      name: featureinfo
      uid: ""
      controller: true
      blockOwnerDeletion: true
spec:
  selector:
    matchLabels:
      pdok.nl/app: mapproxy
      pdok.nl/dataset-id: dataset
      pdok.nl/owner-id: owner
      pdok.nl/service-type: wmts
      pdok.nl/service-version: v1_0
  template:
    metadata:
      labels:
        pdok.nl/app: mapproxy
        pdok.nl/dataset-id: dataset
        pdok.nl/owner-id: owner
        pdok.nl/service-type: wmts
        pdok.nl/service-version: v1_0
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        priority.version-checker.io/mapproxy: "4"
        priority.version-checker.io/wmts-kvp-to-restful: "4"
        prometheus.io/port: "9117"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: wmts-kvp-to-restful
          image: test.test/image:test3
          command:
            - "wmts-kvp-to-restful"
          args:
            - "-host=http://127.0.0.1:80"
            - "-t=/var/www/WMTSCapabilities.xml"
            - "-d=15"
          ports:
            - containerPort: 9001
              protocol: "TCP"
          resources:
            limits:
              "ephemeral-storage": "200M"
              "memory": "128M"
            requests:
              "cpu": "100m"
          volumeMounts:
            - mountPath: "/var/www"
              name: data
          livenessProbe:
            httpGet:
              port: 9001
              path: "/health"
            initialDelaySeconds: 5
            timeoutSeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: 9001
              path: "/health"
            initialDelaySeconds: 5
            timeoutSeconds: 20
            periodSeconds: 10
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: "File"
          imagePullPolicy: "IfNotPresent"
        - name: mapproxy
          image: test.test/image:test4
          env:
            - name: MAX_PROCS
              value: 16
            - name: MIN_PROCS
              value: 16
            - name: AZURE_STORAGE_CONNECTION_STRING
              valueFrom:
                secretKeyRef:
                  name: "mysecretblobname"
                  key: "AZURE_STORAGE_CONNECTION_STRING"
            - name: DEBUG
              value: 0
          resources:
            limits:
              "ephemeral-storage": "21Mi"
              "memory": "4G"
            requests:
              "cpu": "1"
          volumeMounts:
            - name: data
              mountPath: "/var/www"
            - name: mapproxy
              mountPath: "/srv/mapproxy/config/mapproxy.yaml"
              subPath: "mapproxy.yaml"
            - name: lighttpd
              mountPath: "/srv/mapproxy/config/include.conf"
              subPath: "include.conf"
            - name: lighttpd
              mountPath: "/srv/mapproxy/config/response.lua"
              subPath: "response.lua"
          livenessProbe:
            httpGet:
              path: "/mapproxy"
              port: 80
              httpHeaders:
                - name: Content-Type
                  value: text/html
            initialDelaySeconds: 20
            timeoutSeconds: 30
            periodSeconds: 10
            failureThreshold: 1
          readinessProbe:
            httpGet:
              path: "/dataset/dataset-owner/wmts/v1_0/mylayer/EPSG:28992/1/1/1.png"
              port: 80
              httpHeaders:
                - name: Content-Type
                  value: image/png
            initialDelaySeconds: 20
            timeoutSeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            timeoutSeconds: 500
            failureThreshold: 3
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "wget -SO- -T 60 -t 5 'https://my-wms-mapserver/mapserver?MAP_RESOLUTION=92&request=getCapabilities&service=WMS&version=1.3.0' 2>&1 | egrep -aiA10 'HTTP/1.1 200' | egrep -i 'Content-Type: text/xml|Content-Type: application/vnd.ogc.wms_xml'"
          lifecycle:
            preStop:
              exec:
                command:
                  - "sleep"
                  - "15"
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: "File"
          imagePullPolicy: "IfNotPresent"
        - name: apache-exporter
          image: test.test/image:test1
          args:
            - "-scrape_uri=http://localhost/server-status?auto"
          ports:
            - containerPort: 9117
              protocol: TCP
          resources:
            limits:
              "memory": "24M"
            requests:
              "cpu": "20m"
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: "File"
          imagePullPolicy: "IfNotPresent"
      volumes:
        - name: "data"
          emptyDir: {}
        - name: "mapproxy"
          configMap:
            name: featureinfo-wmts-mapproxy-dh6k64mfd9
        - name: "lighttpd"
          configMap:
            name: featureinfo-wmts-mapproxy-dh6k64mfd9
        - name: "capabilities-generator"
          configMap:
            name: "featureinfo-wmts-capabilities-generator-dg95hb7k27"
      initContainers:
        - name: blob-download
          image: test.test/image:test5
          command:
            - /bin/sh
            - "-c"
          args:
            - "set -e;\nrclone config create --non-interactive --obscure blobs azureblob endpoint $BLOBS_ENDPOINT account $BLOBS_ACCOUNT key $BLOBS_KEY use_emulator true;\nmkdir -p /var/www/images;\nrclone copyto blobs:/resources/images/owner/dataset/mylegendpicture.png /var/www/images/mylegendpicture.png;\n"
          envFrom:
            - configMapRef:
                name: "mysecretblobname"
            - secretRef:
                 name: "mysecretblobname"
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: "File"
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              cpu: "200m"
            requests:
              cpu: "150m"
          volumeMounts:
            - mountPath: /var/www
              name: data
        - name: capabilities-generator
          image: test.test/image:test2
          env:
            - name: SERVICECONFIG
              value: "/input/input.yaml"
          volumeMounts:
            - name: data
              mountPath: "/output"
            - name: capabilities-generator
              readOnly: true
              mountPath: "/input"
          terminationMessagePolicy: "File"
          terminationMessagePath: "/dev/termination-log"
          imagePullPolicy: "IfNotPresent"
      restartPolicy: "Always"
      terminationGracePeriodSeconds: 60
      dnsPolicy: "ClusterFirst"
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 4
  revisionHistoryLimit: 1
