internal/controller/test_data/featureinfo/expected/middleware-headers.yaml
kind: Middleware
apiVersion: traefik.io/v1alpha1
metadata:
  name: featureinfo-wmts-mapproxy-headers
  namespace: default
  labels:
    pdok.nl/app: mapproxy
    pdok.nl/dataset-id: dataset
    pdok.nl/owner-id: owner
    pdok.nl/service-type: wmts
    pdok.nl/service-version: v1_0
  ownerReferences:
    - apiVersion: pdok.nl/v2
      kind: WMTS
      name: featureinfo
      uid: ""
      controller: true
      blockOwnerDeletion: true
spec:
  headers:
    customResponseHeaders:
      "Access-Control-Allow-Headers": "Content-Type"
      "Access-Control-Allow-Method": "GET, OPTIONS"
      "Access-Control-Allow-Origin": "*"
      "Cache-Control": "public, max-age=3600, no-transform"
