internal/controller/test_data/featureinfo/expected/poddisruptionbudget.yaml
kind: PodDisruptionBudget
apiVersion: policy/v1
metadata:
  name: featureinfo-wmts-mapproxy
  namespace: default
  labels:
    pdok.nl/app: mapproxy
    pdok.nl/dataset-id: dataset
    pdok.nl/owner-id: owner
    pdok.nl/service-type: wmts
    pdok.nl/service-version: v1_0
  ownerReferences:
    - apiVersion: pdok.nl/v2
      kind: WMTS
      name: featureinfo
      uid: ""
      controller: true
      blockOwnerDeletion: true
spec:
  selector:
    matchLabels:
      pdok.nl/app: mapproxy
      pdok.nl/dataset-id: dataset
      pdok.nl/owner-id: owner
      pdok.nl/service-type: wmts
      pdok.nl/service-version: v1_0
  maxUnavailable: 1
